Some style and label changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div id="compareCard">
     <div id="compareOne">
       <input type="text" id="inputName" placeholder="Weapon Name">
       <input type="number" id="damage" placeholder="Weapon Damage*" required>
@@ -17,11 +18,14 @@
     </div>
     
     <div  class="output">
-      <p id="outputName">Answer Here</p>
-      <p id="output">Answer Here</p>
-      <p id="output1">Answer Here</p>
+      <h3>Weapon:</h3>
+      <p id="outputName"></p>
+      <h3>Shots to Kill:</h3>
+      <p id="output"></p>
+      <h3>Time to Kill:</h3>
+      <p id="output1"></p>
     </div>
-    
+  </div>
     <script src="script.js"></script>
   </body>
 
