Added some styling similar to Valorant Stat Tracker site

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </div>
 
     <div id="buttons">
-      <button id="calculate">Calculate</button>
-      <button id="reset">Reset</button>
+      <button class="button" id="calculate">Calculate</button>
+      <button class="button" id="reset">Reset</button>
     </div>
     
     <div  class="output">
