added more styles like text and trying out grid stuff

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="compareCard">
@@ -17,7 +19,7 @@
       <button class="button" id="reset">Reset</button>
     </div>
     
-    <div  class="output">
+    <div id="finalOutput"  class="output">
       <h3>Weapon:</h3>
       <p id="outputName"></p>
       <h3>Shots to Kill:</h3>
